--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "Node",
+    "noUnusedLocals": true,
     "outDir": "./dist"
   },
   "include": ["src/**/*"]
